<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ParseLoginLib</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_prompt">Don\'t have an account yet?</string>
    <string name="progress_logging_in">Logging in&#8230;</string>
    <string name="progress_signing_up">Signing up&#8230;</string>
    <string name="error">Error</string>
    <string name="login_error">Cannot login. Check your information and try again.</string>
    <string name="sign_up_error">Cannot sign up. Check your information and try again.</string>
    <string name="error_username_required">Username is required.</string>
    <string name="error_password_required">Password is required.</string>
    <string name="error_network">Network error.</string>
    <string name="error_duplicate_user">The username has already been taken.</string>
    <string name="error_duplicate_email">The email address has already been taken.</string>

</resources>